fixed movie info offcenter

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -132,6 +132,12 @@ body{
     gap: 10px;
 }
 
+@media (max-width: 767px) {
+    #infoPage {
+        width: 400px;
+    }
+}
+
 #aboutUs {
     background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0));
     padding: 28px 20px;
